service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ds-app-service
spec:
  selector:
    app: ds-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
